Checkpoint: Final checkpoint - Project deployed to GitHub: - Created comprehensive README_GITHUB.md with full documentation - Added MIT LICENSE with risk disclaimer - Initialized Git repository and configured .gitignore - Created GitHub repository: https://github.com/ALqaqaa50/trading-llama-ai - Pushed all code (231 files, 261.90 KiB) - Project is now publicly accessible on GitHub

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,23 @@ temp/
 *.db
 *.sqlite
 *.sqlite3
+
+# Trading-specific sensitive data
+*.key
+*.pem
+api_keys.json
+trading_keys/
+
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+.Python
+venv/
+env/
+
+# Screenshots
+screenshots/
+
+# Storage
+storage/
